# dida

./: .gitignore  Makefile  Pipfile  README.org  cli.py  client.py  client_test.py  dao.py  dao_test.py  ddl.sql  mix.exs  model.py  pyproject.toml
lib/: dida.ex
