[project]
name = "dida"
version = "0.1.0"
description = "Simple CLI for https://dida365.com."
readme = "README.org"
requires-python = ">=3.10"
dependencies = [
    "typer==0.21.0",
    "httpx==0.28.1",
    "arrow==1.2.2",
    "pony==0.7.19",
    "loguru==0.6.0",
]

[dependency-groups]
dev = ["pytest==9.0.2"]
